@@ -13,6 +13,7 @@
  *
  * Copyright 2006-2008 Sun Microsystems, Inc.
  * Portions Copyright 2014-2016 ForgeRock AS.
+ * Portions Copyright 2026 3A Systems, LLC.
  */
 package org.opends.server.core;
 
@@ -332,7 +333,7 @@ public class IdentityMapperConfigManager
            definition.getJavaClassPropertyDefinition();
       Class<? extends IdentityMapper> mapperClass =
            propertyDefinition.loadClass(className, IdentityMapper.class);
-      IdentityMapper mapper = mapperClass.newInstance();
+      IdentityMapper mapper = mapperClass.getDeclaredConstructor().newInstance();
 
       if (initialize)
       {
