@@ -13,7 +13,7 @@
  *
  * Copyright 2008 Sun Microsystems, Inc.
  * Portions Copyright 2012-2014 ForgeRock AS.
- * Portions Copyright 2024 3A Systems, LLC.
+ * Portions Copyright 2024-2026 3A Systems, LLC.
  */
 package org.opends.server.snmp;
 
@@ -286,6 +286,7 @@ public class SNMPMonitor
     return Subject.doAs(this.subject, new PrivilegedAction()
     {
 
+      @Override
       public Object run()
       {
         try
@@ -318,7 +319,7 @@ public class SNMPMonitor
     Byte[] barray = new Byte[b.length];
     for (int index = 0; index < b.length; index++)
     {
-      barray[index] = new Byte(b[index]);
+      barray[index] = Byte.valueOf(b[index]);
     }
     return barray;
   }
@@ -354,7 +355,7 @@ public class SNMPMonitor
     long v = V.longValue();
     if (v > (pow(2, 32) - 1))
     {
-      return new Long(v % pow(2, 32));
+      return Long.valueOf(v % pow(2, 32));
     }
     else
     {
@@ -393,7 +394,7 @@ public class SNMPMonitor
     long v = V.longValue();
     if (v > (pow(2, 32) - 1))
     {
-      return new Long(pow(2, 32) - 1);
+      return Long.valueOf(pow(2, 32) - 1);
     }
     else
     {
@@ -417,7 +418,7 @@ public class SNMPMonitor
     {
       throw new SnmpStatusException("Returned intrumented value size too big");
     }
-    Integer ret = new Integer(V.intValue());
+    Integer ret = Integer.valueOf(V.intValue());
     return ret;
   }
 
@@ -426,7 +427,7 @@ public class SNMPMonitor
    */
   private static long pow(long x, long y)
   {
-    int j = 1;
+    long j = 1;
     long k = x;
     if (y == 0)
     {
